@@ -2,6 +2,8 @@ Nutch Change Log
 
 (trunk): Current Development
 
+* NUTCH-1453 Substantiate tests for IndexingFilters (lufeng via lewismc)
+
 * NUTCH-840  Port tests from parse-html to parse-tika (lewismc, jnioche)
 
 * NUTCH-1509 Implement read/write in NutchField (markus)
